--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
 <p>Pues bien. Ha llegado MassDown.</p>
 
+<p><img src="https://lh4.googleusercontent.com/-SgBpn6hIeMY/UlLYOY1kV2I/AAAAAAAAEg0/fUxr_PtpAq8/w1185-h596-no/2013-10-07" alt="Captura Massdown"></p>
+
 <p>MassDown es un proyecto sin ánimo de lucro que tiene como objetivo hacer la descarga de series mucho más anónima, segura (sin riesgo a caer en fraudes con números de telefono) y a poder ser, más sencilla.</p>
 
 <h3>
