--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/grmarco/massdown">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/grmarco/massdown/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/grmarco/massdown/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="fork"><a href="https://github.com/grmarco/massdown">Contribuye en GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/grmarco/massdown/zipball/master">Descargar Massdown</a></li>
+          <li class="title">DESCARGAS</li>
         </nav>
       </div><!-- end header -->
 
