--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/grmarco/massdown">Contribuye en GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/grmarco/massdown/zipball/master">Descargar Massdown</a></li>
-          <li class="title">DESCARGAS</li>
+          <li class="downloads"><a href="https://raw.github.com/grmarco/massdown/master/dist/massdown.jar">Descargar Massdown</a></li>
         </nav>
       </div><!-- end header -->
 
