Actualizada la página a la versión 1.0

--- a/index.html
+++ b/index.html
@@ -37,13 +37,24 @@
         </div>
 
         <h3>
-<a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>Da la bienvenida a MassDown</h3>
+<a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>¡massdown 1.0 ha sido liberado!</h3>
 
-<p>Seguramente estés cansado de que te pidan números de teléfono y de que te bombardeen con publicidad cuando entras a una web de descargas para ver tu serie favorita.</p>
+<p>Después de varias semanas de trabajo he conseguido crear todo lo que massdown 0.5 debió ser. De este modo lo he reescrito por completo y he añadido las siguientes nuevas características:</p>
+<ul>
+	<li>Carga de series mejorada. De 1-2min que tardaba antes a milésimas de segundo.</li>
+	<li>Nueva interfaz. En inglés, mucho más intuitiva y moderna.</li>
+	<li>Ahora los episodios se pueden descargar en varios idiomas (español, inglés, inglés subtitulado).</li>
+	<li>Compatibilidad con muchos más servidores.</li>
+	<li>Gestor de descargas mejorado. Ahora se pueden parar las descargas, ponerlas en cola para aprovechar toda la banda ancha y se muestra mucha más información sobre estas (tiempo restante, tamaño descargado, total...).</li>	
+	<li>Código más legible y estandarizado.</li>
+	<li>Muchas más pequeñas mejoras.</li>	
+</ul>
 
-<p>Pues bien. Ha llegado MassDown.</p>
+<h3><a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>¿qué es massdown?</h3>
 
-<p><img src="https://lh4.googleusercontent.com/-SgBpn6hIeMY/UlLYOY1kV2I/AAAAAAAAEg0/fUxr_PtpAq8/w1185-h596-no/2013-10-07" alt="Captura Massdown"></p>
+<p>Seguramente estés cansado de que te bombardeen con publicidad e incluso te cuelen muchos fakes cuando entras a una web de descargas para ver tu serie favorita.</p>
+
+<p><img src="images/captura2.png" alt="Captura Massdown"></p>
 
 <p>MassDown es un proyecto sin ánimo de lucro que tiene como objetivo hacer la descarga de series mucho más anónima, segura (sin riesgo a caer en fraudes con números de telefono) y a poder ser, más sencilla.</p>
 
@@ -63,7 +74,18 @@
 <li>512Mb de RAM</li>
 <li>Conexión a Internet</li>
 <li><strong><a href="http://www.java.com">La última versión de Java</a></strong></li>
-</ul><h2>
+</ul>
+
+<h2>
+<a name="descarga" class="anchor" href="#descarga"><span class="octicon octicon-link"></span></a>Galeria</h2>
+<p><img src="images/captura4.png" alt="Captura Massdown"></p>
+<p><img src="images/captura1.png" alt="Captura Massdown"></p>
+<p><img src="images/captura3.png" alt="Captura Massdown"></p>
+
+
+
+
+<h2>
 <a name="descarga" class="anchor" href="#descarga"><span class="octicon octicon-link"></span></a>Descarga</h2>
 
 <p><strong><a href="https://raw.github.com/grmarco/massdown/master/dist/massdown.jar">Windows | Linux | MacOSX</a></strong></p>
