--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <h2>
 <a name="autor" class="anchor" href="#autor"><span class="octicon octicon-link"></span></a>Autor</h2>
 
-<p>Este proyecto lo ha creado <a href="https://twitter.com/gmarco_">@gmarco_</a>, un adolescente de 16 años, aficionado a las series.</p>
+<p>Este programa no tiene ningún fin lucrativo y los enlaces de las descargas utilizados pertenecen a terceros por lo que me exento totalmente del uso que se le de. Podéis seguirme en twitter <a href="https://twitter.com/gmarco_">@gmarco_</a>.</p>
       </section>
 
     </div>
