--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
       <section>
         <div id="title">
           <h1>Massdown</h1>
-          <p>Descarga series de forma masiva</p>
+          <p>Descarga series</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/grmarco">grmarco</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <h3>
 <a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>¡massdown 1.0 ha sido liberado!</h3>
 
-<p>Después de varias semanas de trabajo he conseguido crear todo lo que massdown 0.5 debió ser. De este modo lo he reescrito por completo y he añadido las siguientes nuevas características:</p>
+<p>Se ha reescrito por completo y añadido las siguientes nuevas características:</p>
 <ul>
 	<li>Carga de series mejorada. De 1-2min que tardaba antes a milésimas de segundo.</li>
 	<li>Nueva interfaz. En inglés, mucho más intuitiva y moderna.</li>
@@ -52,18 +51,14 @@
 
 <h3><a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>¿qué es massdown?</h3>
 
-<p>Seguramente estés cansado de que te bombardeen con publicidad e incluso te cuelen muchos fakes cuando entras a una web de descargas para ver tu serie favorita.</p>
-
 <p><img src="images/captura2.png" alt="Captura Massdown"></p>
 
-<p>MassDown es un proyecto sin ánimo de lucro que tiene como objetivo hacer la descarga de series mucho más anónima, segura (sin riesgo a caer en fraudes con números de telefono) y a poder ser, más sencilla.</p>
+<p>MassDown es un proyecto sin ánimo de lucro que tiene como objetivo hacer la descarga de series anónima, segura (sin riesgo a caer en fraudes) y más sencilla.</p>
 
 <h3>
 <a name="c%C3%B3mo-funciona" class="anchor" href="#c%C3%B3mo-funciona"><span class="octicon octicon-link"></span></a>¿Cómo funciona?</h3>
 
-<p>MassDown, es términos básicos es un robot. El programa lo que hace es entrar en una conocida web de descargas, quita toda la públicidad y obtiene el enlace de descarga directa más seguro. La analogía más cercana sería la de un usuario con experiencia navegando muy rápido por una web de descargas.</p>
-
-<p><code>MassDown = Usuario navegando muy rápido por una web de descargas</code></p>
+<p>MassDown, es términos básicos es un robot. El programa lo que hace es entrar en una conocida web de descargas, quita toda la públicidad y obtiene el enlace de descarga directa más seguro.</p>
 
 <p><strong>Por esta razón, es normal que aparezcan CAPTCHAS en el proceso de obtención de enlaces.</strong></p>
 
@@ -93,7 +88,7 @@
 <h2>
 <a name="autor" class="anchor" href="#autor"><span class="octicon octicon-link"></span></a>Autor</h2>
 
-<p>Este programa no tiene ningún fin lucrativo y los enlaces de las descargas utilizados pertenecen a terceros por lo que me exento totalmente del uso que se le de. Podéis seguirme en twitter <a href="https://twitter.com/gmarco_">@gmarco_</a>.</p>
+<p>Este programa no tiene ningún fin lucrativo y los enlaces de las descargas utilizados pertenecen a terceros.</p>
       </section>
 
     </div>
