--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <h3>
-<a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>¡massdown 1.0 ha sido liberado!</h3>
+<a name="da-la-bienvenida-a-massdown" class="anchor" href="#da-la-bienvenida-a-massdown"><span class="octicon octicon-link"></span></a>¡massdown 1.0 disponible!</h3>
 
 <p>Se ha reescrito por completo y añadido las siguientes nuevas características:</p>
 <ul>
